--- a/tabPageFiles/ClockAndLinks/css/style.css
+++ b/tabPageFiles/ClockAndLinks/css/style.css
@@ -13,7 +13,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 **/
 
 body {
-	background: url('../img/20.jpg') no-repeat center top fixed;
+	background: url('../img/bg.jpg') no-repeat center top fixed;
     background-size: 100% 100%;
     background-origin: content-box;
 	-webkit-background-size:1920px 1080px
