Security commit: NON-WORKING VERSION. Many changes and improvements, but must move all localStorage code to the background page. Sleep time. I say again, THIS IS NOT A WORKING VERSION! That is all :)

--- a/tabPageFiles/ClockAndLinks/css/style.css
+++ b/tabPageFiles/ClockAndLinks/css/style.css
@@ -116,3 +116,14 @@ button {
 	-webkit-box-shadow:0px 0px 5px #555555;
 	
 }
+#bossiBug {
+	width:130px;
+	height:20px;
+	position:absolute;
+	bottom: 20px;
+	right: 20px;
+	-webkit-opacity:0.5;
+}
+#bossiBug:hover {
+	-webkit-opacity:1;
+}
