--- a/tabPageFiles/ClockAndLinks/css/style.css
+++ b/tabPageFiles/ClockAndLinks/css/style.css
@@ -11,6 +11,9 @@ Neither the names of Pierce Moore, RefreshedWeb.com, NerdTraining.info,  nor the
 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 **/
+* {
+	font-family:"Aller","Gotham",verdana,tahoma,sans-serif;
+}
 
 body {
 	background: url('../img/bg.jpg') no-repeat center top fixed;
@@ -41,6 +44,23 @@ h2 {
 	text-shadow:0px 0px 4px #000000;
 	padding:0;
 	letter-spacing:-2px;
+	margin:2px;
+}
+#error,#success {
+	-webkit-border-radius:5px;
+	width:50%;
+	padding:10px;
+	margin:10px auto 10px auto;
+	text-align:center;
+	display:none;
+}
+#error {
+	border:1px #AB4F4F solid;
+	background:#F5E1E1;
+}
+#success {
+	border:1px #73A860 solid;
+	background:#DDEDD8;
 }
 #form {
 	position:absolute;
@@ -82,20 +102,19 @@ button {
 #date {
 	
 }
-#links {
-	width:50%;
-	height:100%;
-	position:absolute;
-	top:0;
-	right:0;
-}
-
 .round {
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	border-radius:5px;
 }
-#links a {
+#links {
+	width:50%;
+	height:100%;
+	position:absolute;
+	top:50px;
+	right:0;
+}
+#links a.link {
 	min-width:100px;
 	min-height:30px;
 	padding:5px;
@@ -104,15 +123,11 @@ button {
 	background:url('black_dot_bg.png');
 	float:left;
 	display:block;
-	-moz-box-shadow:0px 0px 5px #777777;
 	-webkit-box-shadow:0px 0px 5px #777777;
-	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
-	border-radius:5px;
 }
-#links a:hover {
+#links a.link:hover {
 	border:5px #777777 solid;
-	-moz-box-shadow:0px 0px 5px #555555;
 	-webkit-box-shadow:0px 0px 5px #555555;
 	
 }
@@ -127,3 +142,40 @@ button {
 #bossiBug:hover {
 	-webkit-opacity:1;
 }
+#menuBar {
+	padding:10px 0 10px 0;
+	font-size:20px;
+	/*background:url('menu_bg.png') repeat-x;*/
+	background:#666666;
+	color:#eeeeee;
+	position:absolute;
+	top:5px;
+	right:5px;
+	-webkit-box-shadow:0px 0px 3px #000000;
+}
+#menuBar a {
+	padding:10px;
+	color:#eeeeee;
+	text-decoration:none;
+	font-family:"Aller",sans-serif;
+	border-right:1px #cccccc solid;
+}
+a.buttonDeleteLink {
+	width:100%;
+	height:20px;
+	position:relative;
+	z-index:100;
+	display:block;
+	color:#eeeeee;
+	border-bottom:1px #bbbbbb solid;
+}
+a.buttonDeleteLink:hover {
+	background:#eeeeee;
+	color:#333333;
+}
+/*
+#menuBar a:hover {
+	background:#eeeeee;
+	color:#333333;
+}
+*/
