--- a/tabPageFiles/css/style.css
+++ b/tabPageFiles/css/style.css
@@ -19,6 +19,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 	-webkit-user-select: none;
 	user-select: none;
 	font-family:League,sans-serif;
+	line-height: 100%;
 }
 body {
 	background: url('../img/Pacific.jpg') no-repeat top;
@@ -30,6 +31,23 @@ ul {
 }
 h1, h2, h3 {
 	letter-spacing: -3px;
+	margin: 0;
+	padding: 0;
+	color: #ffffff;
+	text-shadow: 0px 2px 4px #000000;
+}
+.shadow {
+	box-shadow: 0px 2px 5px #000000;
+}
+.genBox {
+	width: 700px;
+	padding: 25px;
+	margin:50px auto auto auto;
+	background: -webkit-gradient( linear , left bottom , left top , color-stop( 0 , #eeeeee) , color-stop( 1 , #bbbbbb ) );
+	border-radius: 5px;
+	box-shadow: 0px 2px 8px #000000 , inset 0px 1px 1px #ffffff;
+	color: #666666;
+	font-size: 50px;
 }
 .clear {
 	clear: both;
@@ -120,10 +138,10 @@ h1 {
 }
 a.genbutton {
 	text-decoration: none;
-	padding: 10px 20px;
+	padding: 10px 10px;
 	margin: 0 10px 10px 0;
 	min-width: 100px;
-	min-height: 60px;
+	min-height: 40px;
 	display:block;
 	float:left;
 	text-align: center;
