--- a/tabPageFiles/lib/css/style.css
+++ b/tabPageFiles/lib/css/style.css
@@ -20,11 +20,26 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 	font-family:League,sans-serif;
 	line-height: 100%;
 }
+
+/** Body Styles for Customization **/
 body {
-	background: url('../img/Pacific.jpg') no-repeat top;
+	/*background: url('../img/bg2.jpg') no-repeat top;*/
 	background-size:100% 100%;
 	background-attachment: fixed;
 }
+body.mountains {
+	background: url('../img/bg.jpg') no-repeat top;
+}
+body.trees {
+	background: url('../img/bg2.jpg') no-repeat top;
+}
+body.island {
+	background: url('../img/pacific.jpg') no-repeat top;
+}
+body.grey_gradient {
+	background: -webkit-linear-gradient( #bbb , #888 );
+}
+
 ul {
 	list-style: none;
 }
@@ -82,32 +97,6 @@ h1, h2, h3 {
 #bigbar a {
 	font-size: 60px;
 }
-/*
-#bigbar a {
-	padding: 18px;
-	display:block;
-	float:left;
-	font-size: 40px;
-	text-decoration: none;
-	border-left: 1px #A2A7E8 solid;
-	margin-bottom: 20px;
-}
-#bigbar a:hover {
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#56aec4), color-stop(100%,#175584));
-	background: -webkit-linear-gradient(top,  #56aec4 0%,#175584 100%);
-}
-#bigbar a:active {
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#417c93), color-stop(100%,#175584));
-	background: -webkit-linear-gradient(top,  #417c93 0%,#175584 100%);
-}
-#bigbar a:first-child {
-	-webkit-border-radius: 5px 0 0 5px;
-	border-left: none;
-}
-#bigbar a:last-child {
-	border-right: none;
-	border: none;
-}*/
 h1 {
 	font-size:150px;
 	line-height:80%;
@@ -151,15 +140,14 @@ a.genbutton {
 	text-align: center;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5eaae5), color-stop(100%,#1e5799)); /* Chrome,Safari4+ */
 	border-radius: 5px;
-	box-shadow: inset 0px 1px 1px #ffffff , 0px 4px 4px #000000;
+	box-shadow: inset 0px 1px 1px #ffffff , 0px 4px 10px #000000;
 	font-size: 45px;
 }
 a.genbutton:hover {
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8cbde2), color-stop(100%,#4f7199)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #8cbde2 0%,#4f7199 100%); /* Chrome10+,Safari5.1+ */
+	background: -webkit-linear-gradient(top,  #8cbde2 0%,#4f7199 100%);
 }
 a.genbutton:active {
-	box-shadow: inset 0px 1px 1px #ffffff;
+	box-shadow: inset 0px 1px 1px #ffffff, 0 2px 6px #000;
 }
 #error,#success {
 	-webkit-border-radius:5px;
@@ -216,4 +204,14 @@ a.genbutton:active {
 	margin:auto;
 	background: #eeeeee;
 	border: 2px #333333 solid;
+}
+
+/** Form Styling **/
+select, input {
+	margin-left: 20px;
+	padding: 5px 10px;
+	border-radius: 5px;
+}
+select {
+	font-size: 30px;
 }
