--- a/tabPageFiles/lib/css/style.css
+++ b/tabPageFiles/lib/css/style.css
@@ -23,8 +23,9 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 
 /** Body Styles for Customization **/
 body {
-	background-size: cover;
+	background-size: 100% 100%;
 	background-attachment:fixed;
+	background-repeat: no-repeat;
 }
 
 ul {
@@ -34,7 +35,7 @@ a {
 	text-decoration: none;
 }
 h1, h2, h3 {
-	letter-spacing: -3px;
+	letter-spacing: -2px;
 	margin: 0;
 	padding: 0;
 	color: #ffffff;
