--- a/css/bantp.less
+++ b/css/bantp.less
@@ -39,6 +39,8 @@
 * {
 	.f_nexa;
 	color: #222;
+	-webkit-transition: all 0.3s;
+	-webkit-user-select: none;
 }
 html, body {
 	height: 100%;
@@ -46,11 +48,14 @@ html, body {
 body {
 	background: #ddd;
 }
+
+
+/** HEADERS and TYPOGRAPHY **/
 h1 {
 	.f_novecento_bold;
 
 	&.logo {
-		font-size: 4em;
+		font-size: 5em;
 		letter-spacing: -5px;
 		color: #222;
 		margin: 0;
@@ -62,7 +67,13 @@ h1 {
 	}
 }
 
+h2 {
+	.f_verb;
+}
+
+
 button {
+	font-size: 1.1em;
 	.gradientBg( #eee, #ccc );
 	.borderRadius( 3px );
   border: 1px solid #ccc;
@@ -87,4 +98,30 @@ button {
     -webkit-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
     box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
   }
+}
+
+a {
+	text-decoration: none;
+
+	&.placer_addModule {
+		.f_novecento_bold;
+		.borderRadius(10px);
+		background: #999;
+		background-opacity: 0.5;
+		border: 5px #333 dashed;
+		padding: 10px 25px;
+		font-size: 25px;
+		color: #eee;
+		text-shadow: 0 2px 4px #222;
+		box-shadow: 0 0 3px #000;
+
+		&:hover {
+			background: #bbb;
+		  box-shadow: inset 0 0 5px #666, 0 0 3px #000;
+		}
+
+		&:active {
+		  box-shadow: inset 0 0 10px #000, 0 0 3px #000;
+		}
+	}
 }
