--- a/css/bantp.less
+++ b/css/bantp.less
@@ -70,8 +70,12 @@ h1 {
 h2 {
 	.f_novecento_bold;
 	margin: 0;
+	letter-spacing: -2px;
 }
 
+img {
+
+}
 
 button {
 	font-size: 1.1em;
@@ -104,6 +108,15 @@ button {
 a {
 	text-decoration: none;
 
+	&.app_icon {
+		.borderRadius( 3px );
+		border: 3px #eee solid;
+		box-shadow: 0 1px 3px #999;
+		display: block;
+		float: left;
+		margin: 0 3px 3px 0;
+	}
+
 	&.placer_addModule {
 		.f_novecento_bold;
 		.borderRadius(10px);
@@ -130,7 +143,7 @@ a {
 
 .module {
 	.gradientBg( #ddd, #ccc );
-	.borderRadius( 5px );
+	.borderRadius( 3px );
 	border: 1px #bbb solid;
 	box-shadow: 0 1px 1px #999, inset 0 1px 1px #fff;
 	padding: 8px;
