--- a/css/bantp.less
+++ b/css/bantp.less
@@ -112,9 +112,14 @@ a {
 		.borderRadius( 3px );
 		border: 3px #eee solid;
 		box-shadow: 0 1px 3px #999;
-		display: block;
+		display: inline;
 		float: left;
 		margin: 0 3px 3px 0;
+		opacity: 0.6;
+
+		&:hover {
+			opacity: 1;
+		}
 	}
 
 	&.placer_addModule {
