--- a/css/bantp.less
+++ b/css/bantp.less
@@ -73,6 +73,10 @@ h2 {
 	letter-spacing: -2px;
 }
 
+i {
+	color: #eee;
+}
+
 img {
 
 }
@@ -173,4 +177,8 @@ a {
 	border: 1px #bbb solid;
 	box-shadow: 0 1px 1px #999, inset 0 1px 1px #fff;
 	padding: 8px;
+}
+
+#primaryContentPane {
+	overflow-y: auto;
 }
