--- a/css/bantp.less
+++ b/css/bantp.less
@@ -96,21 +96,33 @@ i {
 .module {
 	.gradientBg( #ddd, #ccc );
 	.borderRadius( 3px );
-	border: 1px #bbb solid;
-	box-shadow: 0 1px 1px #999, inset 0 1px 1px #fff;
+	border: 1px #999 solid;
+	//box-shadow: 0 1px 4px #222, inset 0 1px 1px #fff;
+	box-shadow: inset 0 1px 1px #fff;
 	padding: 8px;
 	margin: 10px 10px 10px 0;
 }
 
 .app_icon {
-	border: 3px #eee solid;
-	border-radius: 5px;
-	box-shadow: 0 2px 6px #222;
-	width: 50px;
-	height: 50px;
+	border: 2px #eee solid;
+	border-radius: 3px;
+	box-shadow: 0 1px 4px #444;
+	width: 38px;
+	height: 38px;
 	display: block;
 	float: left;
 	margin: 0 5px 5px 0;
+	opacity: 0.7;
+
+	.transition(0.3s);
+
+	&:hover {
+		opacity: 1;
+	}
+
+	img {
+		border-radius: 3px;
+	}
 }
 
 
@@ -142,7 +154,7 @@ i {
 		}
 
 		&:active {
-			
+			background: -webkit-linear-gradient( top, #333, #111 );
 		}
 	}
 }
@@ -150,7 +162,7 @@ i {
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: 200;
+	z-index: 80;
 	height: 100%;
 	min-height: 100%;
 	overflow-y: scroll;
