--- a/css/bantp.less
+++ b/css/bantp.less
@@ -139,18 +139,32 @@ i {
 	text-align: center;
 	padding-top: 10px;
 
+	p {
+		padding: 5%;
+		background: -webkit-linear-gradient( top, #999, #ccc );
+		border: 1px #ddd solid;
+		box-shadow: 0 0 4px #222;
+		color: #eee;
+		text-shadow: 0 1px 3px #000;
+		margin: 0;
+		position: relative;
+		z-index: 150;
+	}
+
 	a {
 		display: block;
 		text-align: center;
-		padding: 30%;
+		padding: 15%;
 		font-size: 2em;
 		text-shadow: 0 2px 10px #000;
 		text-decoration: none;
 		.transition(0.3s);
+		position: relative;
+		z-index: 100;
 
 		&:hover {
 			background: -webkit-linear-gradient( top, #222, #000 );
-			box-shadow: 0 0 10px #000, inset 0 1px 1px #444;
+			box-shadow: 0 0 10px #000, inset 0 1px 1px #444, inset 0 -1px 1px #222;
 		}
 
 		&:active {
