--- a/sass/bantp.scss
+++ b/sass/bantp.scss
@@ -102,25 +102,14 @@ i {
 	margin: 10px 10px 10px 0;
 }
 
-.app_icon {
-	border: 2px #eee solid;
-	border-radius: 3px;
-	box-shadow: 0 1px 4px #444;
-	width: 38px;
-	height: 38px;
-	display: block;
-	float: left;
-	margin: 0 5px 5px 0;
-	opacity: 0.7;
-
-	@include transition(0.3s);
-
+.app_launch {
+	text-decoration: none;
+	
 	&:hover {
-		opacity: 1;
-	}
-
-	img {
-		border-radius: 3px;
+		text-decoration: none;
+		border-bottom: none;
+		box-shadow: 2px #000 solid;
+		border-radius: 2px;
 	}
 }
 
