--- a/stylesheets/bantp.css
+++ b/stylesheets/bantp.css
@@ -21,6 +21,8 @@ a, button {
   a.btn, button.btn {
     font-family: Open Sans;
     font-weight: 300; }
+  a:hover, button:hover {
+    text-decoration: none; }
 
 /** HEADERS and TYPOGRAPHY **/
 h1, h2, h3, h4 {
